--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,6 +21,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v2
+    - run: postgres --version
+    - run: psql --version
     - uses: ./
     - run: pg_isready --dbname=${{ env.POSTGRES_URL }}
     - run: psql --command='\d' ${{ env.POSTGRES_URL }}
