Do not use set-env
https://github.blog/changelog/2020-10-01-github-actions-deprecating-set-env-and-add-path-commands/

https://docs.github.com/en/free-pro-team@latest/actions/reference/workflow-commands-for-github-actions#environment-files

--- a/action.yml
+++ b/action.yml
@@ -9,5 +9,5 @@ runs:
       shell: bash
     - run: createdb ${USER}
       shell: bash
-    - run: echo "::set-env name=POSTGRES_URL::postgres://localhost/${{ env.USER }}"
+    - run: echo "POSTGRES_URL=postgres://localhost/${{ env.USER }}" >> $GITHUB_ENV
       shell: bash
