--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,7 +7,7 @@ on:
     paths-ignore:
     - README.md
   schedule:
-    - cron: '0 7 * * SUN'
+    - cron:  "0 6 * * 6" # 06:00 every Saturday
 jobs:
   test:
     strategy:
