--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,5 +21,7 @@ jobs:
     - uses: actions/checkout@v2
     - run: psql --version
     - uses: ./
-    - run: pg_isready --dbname=${{ env.POSTGRES_URL }}
-    - run: psql --command='\d' ${{ env.POSTGRES_URL }}
+    - run: pg_isready --dbname=$POSTGRES_URL
+    - run: psql --command='CREATE TABLE tbl()' $POSTGRES_URL
+    - run: psql --command='\d' $POSTGRES_URL
+    - run: psql --command='SELECT * FROM pg_available_extensions' $POSTGRES_URL
