--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,6 +2,7 @@ name: Update the v1 branch when a release is published
 on:
   release:
     types: [published]
+  workflow_dispatch:
 jobs:
   release:
     runs-on: ubuntu-latest
