--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,6 +8,7 @@ on:
     - README.md
   schedule:
     - cron:  "0 6 * * 6" # 06:00 every Saturday
+  workflow_dispatch:
 jobs:
   test:
     strategy:
