GitHub Actions now install PostgreSQL 14
SCRAM-SHA-256 is now the default instead of MD5.

From https://www.postgresql.org/docs/14/release-14.html

> Change the default of the password_encryption server parameter to
> scram-sha-256 (Peter Eisentraut)
>
> Previously it was md5. All new passwords will be stored as SHA256 unless
> this server setting is changed or the password is specified in MD5
> format. Also, the legacy (and undocumented) Boolean-like values which
> were previously synonyms for md5 are no longer accepted.

--- a/.github/workflows/debug.yml
+++ b/.github/workflows/debug.yml
@@ -13,8 +13,10 @@ jobs:
     runs-on: ${{ matrix.os }}
     continue-on-error: true # prevent the workflow to fail if this job fails
     steps:
+    - run: ls -al /etc/postgresql
+    - run: cat /etc/postgresql/*/main/pg_hba.conf
     # the action steps
-    - run: sudo sed -i s/md5/trust/g /etc/postgresql/*/main/pg_hba.conf
+    - run: sudo sed -i s/scram-sha-256/trust/g /etc/postgresql/*/main/pg_hba.conf
       continue-on-error: true
     - run: sudo systemctl start postgresql.service
       continue-on-error: true
