Set icon and color
https://docs.github.com/en/actions/creating-actions/metadata-syntax-for-github-actions

--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,8 @@
 name: "PostgreSQL in GitHub Actions VM"
 description: "Start PostgreSQL in the GitHub Actions VM"
+branding:
+  icon: "save"
+  color: "orange"
 runs:
   using: "composite"
   steps:
