--- a/.github/workflows/debug.yml
+++ b/.github/workflows/debug.yml
@@ -7,7 +7,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ ubuntu-18.04, ubuntu-20.04 ]
+        os: [ ubuntu-18.04, ubuntu-20.04, ubuntu-22.04 ]
 
     name: ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
